Exercise Typing functions and arrow functons with generics

--- a/package.json
+++ b/package.json
@@ -19,16 +19,24 @@
     "s": "npm run solution",
     "prepare": "node ./scripts/prepare-stackblitz.js",
     "e-01": "npm run exercise -- 01",
+    "s-01ms": "npm run solution -- 01ms",
     "s-01": "npm run solution -- 01",
     "e-02": "npm run exercise -- 02",
+    "s-02ms": "npm run solution -- 02ms",
     "s-02": "npm run solution -- 02",
     "e-03": "npm run exercise -- 03",
+    "s-03ms": "npm run solution -- 03ms",
     "s-03": "npm run solution -- 03",
     "e-04": "npm run exercise -- 04",
+    "s-04ms01": "npm run solution -- 04ms01",
+    "s-04ms02": "npm run solution -- 04ms02",
+    "s-04ms03": "npm run solution -- 04ms03",
     "s-04": "npm run solution -- 04",
     "e-05": "npm run exercise -- 05",
+    "s-05ms": "npm run solution -- 05ms",
     "s-05": "npm run solution -- 05",
     "e-06": "npm run exercise -- 06",
+    "s-06ms": "npm run solution -- 06ms",
     "s-06": "npm run solution -- 06",
     "e-07": "npm run exercise -- 07",
     "s-07": "npm run solution -- 07",
@@ -95,7 +103,9 @@
     "e-33": "npm run exercise -- 33",
     "s-33": "npm run solution -- 33",
     "e-34": "npm run exercise -- 34",
-    "s-34": "npm run solution -- 34"
+    "s-34": "npm run solution -- 34",
+    "e-29.2": "npm run exercise -- 29.2",
+    "s-29.2": "npm run solution -- 29.2"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
