exercise Pass Type Arguments to a Function

--- a/package.json
+++ b/package.json
@@ -39,14 +39,19 @@
     "s-06ms": "npm run solution -- 06ms",
     "s-06": "npm run solution -- 06",
     "e-07": "npm run exercise -- 07",
+    "s-07ms": "npm run solution -- 07ms",
     "s-07": "npm run solution -- 07",
     "e-08": "npm run exercise -- 08",
+    "s-08ms": "npm run solution -- 08ms",
     "s-08": "npm run solution -- 08",
     "e-09": "npm run exercise -- 09",
+    "s-09ms": "npm run solution -- 09ms",
     "s-09": "npm run solution -- 09",
     "e-10": "npm run exercise -- 10",
+    "s-10ms": "npm run solution -- 10ms",
     "s-10": "npm run solution -- 10",
     "e-11": "npm run exercise -- 11",
+    "s-11ms": "npm run solution -- 11ms",
     "s-11": "npm run solution -- 11",
     "e-12": "npm run exercise -- 12",
     "s-12": "npm run solution -- 12",
