exercise Type the reduce method

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "s-09ms": "npm run solution -- 09ms",
     "s-09": "npm run solution -- 09",
     "e-10": "npm run exercise -- 10",
-    "s-10ms": "npm run solution -- 10ms",
+    "s-10ms01": "npm run solution -- 10ms01",
+    "s-10ms02": "npm run solution -- 10ms02",
+    "s-10ms03": "npm run solution -- 10ms03",
     "s-10": "npm run solution -- 10",
     "e-11": "npm run exercise -- 11",
     "s-11ms": "npm run solution -- 11ms",
